k8s-manifests/istio-peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mtls-strict
  namespace: servicios-estudiantiles
spec:
  mtls:
    mode: STRICT
