k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: servicios-estudiantiles
  labels:
    istio-injection: enabled
