k8s-manifests/istio-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: soapclient-dr
  namespace: servicios-estudiantiles
spec:
  host: soapclient-service.servicios-estudiantiles.svc.cluster.local
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 3
      interval: 60s
      baseEjectionTime: 120s
