k8s-manifests/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: soapclient-vs
  namespace: servicios-estudiantiles
spec:
  hosts:
  - soapclient-service.servicios-estudiantiles.svc.cluster.local
  http:
  - route:
    - destination:
        host: soapclient-service.servicios-estudiantiles.svc.cluster.local
    retries:
      attempts: 2
      perTryTimeout: 3s
      retryOn: gateway-error,connect-failure,refused-stream
