k8s-manifests/kong-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solicitud-ingress
  namespace: servicios-estudiantiles
  annotations:
   # konghq.com/plugins: jwt-auth,rate-limit
spec:
  rules:
  - http:
      paths:
      - path: /solicitudes
        pathType: Prefix
        backend:
          service:
            name: solicitud-service
            port:
              number: 80
